<resources>
    <string name="app_name">Eat at Home</string>
    <string name="slogan">Be wise Shop Wise</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="name_of_menu">Name of Menu</string>
    <string name="name_of_food">Name of Food</string>
    <string name="description">Description</string>
    <string name="details">Details</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account ? Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="phone">Phone</string>
    <string name="already_have_an_account_sign_in">Already have an account ? Sign In</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="category_name">Category Name</string>
    <string name="title_activity_tracking_order_res">Map</string>
    <string name="_03214124521">03214124521</string>

    <string name="title_activity_tracking_order">Map</string>
    <string name="total">Total:</string>
    <string name="place_order">Place Order</string>
    <string name="price">Price:</string>
    <string name="show_comment">Show Comment</string>
    <string name="eat_at_home">Eat at Home</string>
    <string name="client_sign_in">Client Sign In</string>
    <string name="restaurant_sign_in">Restaurant Sign In</string>
    <string name="rider_sign_in">Rider Sign In</string>
    <string name="password">Password</string>
    <string name="role">Role</string>
    <string name="order_phone">Order Phone</string>
    <string name="comment">Comment</string>
    <string name="staff_sign_in">Staff Sign In</string>
    <string name="admin_sign_in">Admin Sign In</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="or">or</string>
    <string name="admin_picture">admin_picture</string>
    <string name="phone_number">Phone Number</string>
    <string name="secure_code">Secure Code</string>
    <string name="distance">Distance:</string>
    <string name="duration">Duration:</string>
    <string name="time_reach">Time Reach:</string>
    <string name="call">CALL</string>
    <string name="update_address">Update Address</string>
    <string name="home_address">Home Address</string>
    <string name="update_username">Update Username</string>
    <string name="username">Username</string>
    <string name="food_name">Food Name</string>
    <string name="food_price">Food Price</string>
    <string name="food_description">Food Description</string>
    <string name="select">Select Image</string>
    <string name="upload">Upload Image</string>
    <string name="delete">DELETE</string>
    <string name="rs">Rs:</string>
    <string name="user_name">User Name</string>
    <string name="product_name">Product Name</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="product_price">Product Price</string>
    <string name="order_id">Order Id: </string>
    <string name="order_date">Order Date: </string>
    <string name="customer_name">Customer: </string>
    <string name="status">Status: </string>
    <string name="address">Address: </string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="shipping">Shipping</string>
    <string name="name_of_restaurant">Name of Restaurant</string>
    <string name="shipper_phone">Shipper Phone</string>
    <string name="shipper_name">Shipper Name</string>
    <string name="shipper_password">Shipper Password</string>
    <string name="shipper">Shipper:</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_ship">Confirm Ship</string>
    <string name="direction">Direction</string>
    <string name="delete_order">Delete Order</string>
    <string name="phone_no">Phone No: </string>
    <string name="total_price">Total Price:</string>
    <string name="title_activity_nearby_restaurants">Map</string>

    <string name="title_activity_display">Transport Display</string>
    <string name="firebase_path" translatable="false">Restaurants</string>
    <string name="firebase_email" translatable="false">test@example.com</string>
    <string name="firebase_password" translatable="false">password</string>
    <string name="login">Login</string>
    <string name="app_admin_login">App Admin Login</string>
    <string name="restaurant_login">Restaurant Login</string>
    <string name="add_food_by_restaurant">Add Food By Restaurant</string>
    <string name="client_login">Client Login</string>
    <string name="buy_your_favourite_food">Buy Your Favourite Food</string>
    <string name="client_signup">Client Sign Up</string>
    <string name="create_account_to_buy_food">Create Account to Buy Food</string>
    <string name="deliver_your_pickup_food">Deliver your Pickup Food</string>
    <string name="rider_login">Rider Login</string>
    <string name="manage_restaurants">Manage Restaurants</string>
</resources>