<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/my_bg"
        tools:context=".MainActivity">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_Logo"
                android:layout_width="300dp"
                android:layout_height="150dp"
                android:gravity="center"
                android:text="@string/eat_at_home"
                android:textColor="@android:color/white"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/txt_slogan"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/slogan"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_staff_sign_in"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="25dp"
                android:text="@string/staff_sign_in"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:theme="@style/Theme.MyApp"
                app:backgroundTint="@color/btnColorLightGreen"
                app:cornerRadius="10dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_admin_sign_in"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="25dp"
                android:text="@string/admin_sign_in"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:theme="@style/Theme.MyApp"
                app:backgroundTint="@android:color/holo_red_dark"
                app:cornerRadius="10dp" />

        </LinearLayout>


    </RelativeLayout>

</layout>