<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/my_bg"
        tools:context=".ClientSide.Activities.SignInActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="8dp"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="80dp"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/client_login"
                    android:textColor="@android:color/white"
                    android:textSize="35sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/buy_your_favourite_food"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_phone_number"
                style="@style/Theme.MyApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:textColorHint="@android:color/white"
                app:boxStrokeColor="@android:color/white"
                app:counterTextColor="@android:color/white"
                app:hintTextColor="@android:color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:text=""
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_password"
                style="@style/Theme.MyApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:textColorHint="@android:color/white"
                app:boxStrokeColor="@android:color/white"
                app:endIconMode="password_toggle"
                app:hintTextColor="@android:color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:text=""
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="8dp"
                android:text="@string/sign_in"
                android:textColor="@android:color/white"
                android:theme="@style/Theme.MyApp"
                app:backgroundTint="@color/btnColorLightGreen"
                app:cornerRadius="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/chk_remember"
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/remember_me"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_forgot_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/forgot_password"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="100dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:background="@android:color/white" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/or"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <View
                    android:layout_width="100dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:background="@android:color/white" />

            </LinearLayout>

            <TextView
                android:id="@+id/txt_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/don_t_have_an_account_sign_up"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>

    </RelativeLayout>

</layout>