<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/my_bg"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_Logo"
                android:layout_width="300dp"
                android:layout_height="150dp"
                android:gravity="center"
                android:text="@string/eat_at_home"
                android:textColor="@android:color/white"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/txt_slogan"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:text="@string/slogan"
                android:textColor="@android:color/white"
                android:textSize="20sp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_sign_in"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:text="@string/client_sign_in"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:theme="@style/Theme.MyApp"
                app:backgroundTint="@android:color/holo_green_dark"
                app:cornerRadius="10dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_sign_in_restaurant"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:text="@string/restaurant_sign_in"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:theme="@style/Theme.MyApp"
                app:backgroundTint="@android:color/holo_red_dark"
                app:cornerRadius="10dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignInAsShipper"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:text="@string/rider_sign_in"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:theme="@style/Theme.MyApp"
                app:backgroundTint="@android:color/holo_orange_dark"
                app:cornerRadius="10dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignInAdmin"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:text="Administrator Sign In"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:theme="@style/Theme.MyApp"
                app:backgroundTint="@android:color/holo_blue_bright"
                app:cornerRadius="10dp" />

        </LinearLayout>

    </RelativeLayout>

</layout>