<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_bg"
    tools:context=".Rider.Activities.SignInAsRiderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="8dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/rider_login"
                android:textColor="@android:color/white"
                android:textSize="35sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/deliver_your_pickup_food"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

       <!-- <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:src="@drawable/rider" />-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_rider_phone_number"
            style="@style/Theme.MyApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textColorHint="@color/colorWhite"
            app:boxStrokeColor="@color/colorWhite"
            app:counterTextColor="@color/colorWhite"
            app:hintTextColor="@color/colorWhite">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_rider_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:text=""
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_rider_password"
            style="@style/Theme.MyApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textColorHint="@color/colorWhite"
            app:boxStrokeColor="@color/colorWhite"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/colorWhite">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_rider_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text=""
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_rider_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="8dp"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            android:theme="@style/Theme.MyApp"
            app:backgroundTint="@color/btnColorLightGreen"
            app:cornerRadius="5dp" />

    </LinearLayout>

</RelativeLayout>

