<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="15dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_phone_number"
            style="@style/Theme.MyApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textColorHint="@color/colorAccent"
            app:boxStrokeColor="@color/colorAccent"
            app:counterTextColor="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:text="@string/_03214124521"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_secure_code"
            style="@style/Theme.MyApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textColorHint="@color/colorAccent"
            app:boxStrokeColor="@color/colorAccent"
            app:counterTextColor="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_secure_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/secure_code"
                android:inputType="text"
                android:text="12345678"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>