<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_bg"
    tools:context="com.example.eatathome.Client.Activities.UpdateAddressActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:src="@drawable/iconfinder_home" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/update_address"
            android:textColor="@color/colorWhite"
            android:textSize="32sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_edtHomeAddress"
            style="@style/Theme.MyApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textColorHint="@android:color/white"
            app:boxStrokeColor="@android:color/white"
            app:hintTextColor="@android:color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_edtHomeAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/home_address"
                android:inputType="text"
                android:text=""
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="8dp"
            android:text="@string/confirm"
            android:textColor="@android:color/white"
            android:theme="@style/Theme.MyApp"
            app:backgroundTint="@color/btnColorLightGreen"
            app:cornerRadius="5dp" />

    </LinearLayout>

</RelativeLayout>
